# mghands

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Dockerfile.sandbox  README.md  RUNBOOK.md  docker-compose.yaml  pyproject.toml
src/mghands_gateway/: __init__.py  agent_client.py  app.py  auth.py  config.py  models.py  sandbox_backend.py  secret_store.py  session_store.py  skills.py
src/mghands_sandbox/: __init__.py  app.py  models.py  sdk_runtime.py
tests/: test_admin_apis.py  test_agent_client.py  test_app.py  test_auth.py  test_files_api.py  test_models.py  test_sandbox_app.py  test_sandbox_backend.py  test_session_store.py  test_skills.py  test_stream.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  styles.css  types.ts
