[project]
name = "mghands-gateway"
version = "0.1.0"
description = "Lightweight OpenHands session gateway"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.1.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "openhands-agent-server==1.29.0",
    "openhands-sdk==1.29.0",
    "openhands-tools==1.29.0",
    "pydantic-settings>=2.5.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
mghands-gateway = "mghands_gateway.app:main"
mghands-sandbox = "mghands_sandbox.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mghands_gateway", "src/mghands_sandbox"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
